<resources>
    <string name="app_name">Fantasy Football</string>
    <string name="button_addTeam">Create Team</string>
    <string name="button_listTeam">Show Teams</string>
    <string name="hint_teamName">Team Name</string>
    <string name="edit_team">Change Name</string>
    <string name="squad_list">Squad List</string>
    <string name="edit_squad">Change Squad</string>
    <string name="delete_squad">Delete Squad</string>
    <string name="go_back">  Back   </string>
    <string name="confirm">Confirm</string>
    <string name="app_title">Fantasy 5 A Side</string>
    <string name="your_team">Your Teams</string>
    <string name="title_activity_list_players">ListPlayersActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
