<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditTeamActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            tools:ignore="MissingConstraints">


            <Button
                android:id="@+id/btn_editGoBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/go_back"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </com.google.android.material.appbar.AppBarLayout>

        <EditText
            android:id="@+id/editTeamName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:hint="@string/hint_teamName"
            android:inputType="text"
            android:maxLength="25"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_editTeamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorAccent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:stateListAnimator="@null"
            android:text="@string/edit_team"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />


        <Button
            android:id="@+id/btn_deleteSquad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorAccent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:stateListAnimator="@null"
            android:text="@string/delete_squad"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_editSquad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorAccent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:stateListAnimator="@null"
            android:text="@string/edit_squad"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playerRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />



    </LinearLayout>




















</androidx.constraintlayout.widget.ConstraintLayout>